--- a/index.html
+++ b/index.html
@@ -3710,6 +3710,9 @@ https://allinonereborn.com/test/m3u.php?id=22286
 #EXTINF:-1 tvg-id="6074" tvg-logo="http://134.119.176.239/stalker_portal/misc/logos/320/2620.jpg" group-title="KIDS",CARTOON NETWORK....
 https://allinonereborn.com/test/m3u.php?id=6074
 
+#EXTINF:-1 tvg-id="6074" tvg-logo="http://134.119.176.239/stalker_portal/misc/logos/320/2620.jpg" group-title="KIDS",SUPER HUNGAMA
+https://564f-150-242-149-160.ngrok-free.app/b1g/b1g.php?id=663387
+
 #EXTINF:-1 tvg-id="20467" tvg-logo="" group-title="KIDS",CARTOON NETWORK US
 https://allinonereborn.com/test/m3u.php?id=20467
 
